[gd_scene load_steps=51 format=2]

[ext_resource path="res://pesonajens e mais/inimigo 1/Skeleton enemy.png" type="Texture" id=1]
[ext_resource path="res://script/inimigo 1.gd" type="Script" id=2]
[ext_resource path="res://pesonajens e mais/brilho/omzNL.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 448, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 1 )
region = Rect2( 576, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 1 )
region = Rect2( 704, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 1 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 1 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 1 )
region = Rect2( 512, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 1 )
region = Rect2( 576, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 1 )
region = Rect2( 640, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 1 )
region = Rect2( 704, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 1 )
region = Rect2( 768, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "andando",
"speed": 5.0
}, {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ) ],
"loop": true,
"name": "ataque",
"speed": 5.0
}, {
"frames": [ SubResource( 111 ), SubResource( 112 ), SubResource( 113 ) ],
"loop": true,
"name": "dano",
"speed": 3.0
}, {
"frames": [ SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ) ],
"loop": false,
"name": "morte",
"speed": 5.0
}, {
"frames": [ SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 40, 12 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 40, 12 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 16, 12 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 16, 12 )

[sub_resource type="RectangleShape2D" id=91]
extents = Vector2( 38, 12 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 24, 20 )

[node name="inimigo1" type="KinematicBody2D"]
position = Vector2( 133, -61 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -133, 61 )
scale = Vector2( 2.87189, 2.04565 )
frames = SubResource( 36 )
animation = "parado"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -129, 89 )
shape = SubResource( 43 )

[node name="direita detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="direita detect"]
position = Vector2( -5, 57 )
shape = SubResource( 47 )

[node name="esquerda detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="esquerda detect"]
position = Vector2( -261, 57 )
shape = SubResource( 48 )

[node name="ataque1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ataque1"]
position = Vector2( -189, 57 )
shape = SubResource( 49 )

[node name="ataque2" type="Area2D" parent="."]
position = Vector2( 3, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ataque2"]
position = Vector2( -80, 60 )
shape = SubResource( 50 )

[node name="parede colisao" type="Area2D" parent="."]
position = Vector2( -109, -19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="parede colisao"]
position = Vector2( -24, 76 )
shape = SubResource( 91 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 3, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -132, 50 )
shape = SubResource( 51 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -124.5, 37 )
scale = Vector2( 0.285156, 0.132813 )
texture = ExtResource( 3 )
texture_scale = 1.51
color = Color( 0.447059, 1, 0.976471, 1 )
energy = 0.8

[connection signal="body_entered" from="direita detect" to="." method="_on_direita_detect_body_entered"]
[connection signal="body_entered" from="esquerda detect" to="." method="_on_esquerda_detect_body_entered"]
[connection signal="body_entered" from="ataque1" to="." method="_on_ataque1_body_entered"]
[connection signal="body_exited" from="ataque1" to="." method="_on_ataque1_body_exited"]
[connection signal="body_entered" from="ataque2" to="." method="_on_ataque2_body_entered"]
[connection signal="body_exited" from="ataque2" to="." method="_on_ataque2_body_exited"]
[connection signal="body_entered" from="parede colisao" to="." method="_on_parede_colisao_body_entered"]
